@@ -14,5 +14,3 @@ m1Sinonimoak=Couldn't load Adorez synonym dictionary.
 m1UZEI=Couldn't load UZEI's synonym dictionary.
 m1Mokoroa=Couldn't load Mokoroa.
 m1Intza=Couldn't load Intza.
-m1hiztegiak=Show dictionaries menu
-m2hiztegiak=Hide dictionaries menu
