@@ -14,5 +14,3 @@ m1Sinonimoak=No se ha podido cargar el diccionario de sinónimos Adorez.
 m1UZEI=No se ha podido cargar el diccionario de sinónimos de UZEI.
 m1Mokoroa=No se ha podido cargar Mokoroa.
 m1Intza=No se ha podido cargar Intza.
-m1hiztegiak=Mostrar el menú de diccionarios
-m2hiztegiak=Esconder el menú de diccionarios
