@@ -61,6 +61,8 @@
 <!ENTITY euskalbar.prefs.skin.caption "Azalak">
 <!ENTITY euskalbar.prefs.skin.label "Aukeratu azal bat Euskalbarrentzako:">
 <!ENTITY euskalbar.prefs.skin.custom "Erabili azal pertsonalizatua">
+<!ENTITY euskalbar.prefs.dicts.caption "Hiztegien menua">
+<!ENTITY euskalbar.prefs.dicts.label "Erakutsi hiztegien menua">
 
 
 <!-- Euskalterm -->
