@@ -14,5 +14,3 @@ m1Sinonimoak=Ezin izan da Adorez sinonimoen hiztegia kargatu.
 m1UZEI=Ezin izan da UZEIren sinonimoen hiztegia kargatu.
 m1Mokoroa=Ezin izan da Mokoroa kargatu.
 m1Intza=Ezin izan da Intza kargatu.
-m1hiztegiak=Erakutsi hiztegien menua
-m2hiztegiak=Ezkutatu hiztegien menua
