@@ -8,6 +8,7 @@
 - Elebila euskarazko bilatzailea gehitu zaio barrari. (#56)
 - CorpEusen eta ZT Corpusean azentu markak, eñeak eta dieresiak ematen dituzten arazoak konpondu dira. (#55)
 - Ereduzko prosa gaur proiektuko corpusa eta Klasikoen gordailua gehitu zaizkio barrari. (#54)
+- Hiztegien menua erakutsi/ezkutatzeko hobespena hobespenen leihoan integratu da. (#49)
 
 
 3.0 bertsioa
